syntax = "proto3";

import "map.proto";
option go_package = "factorio/grpc";

package grpc;

service Mine {
  rpc sendResource (ItemRequest) returns (ItemReply) {}
}

message ItemRequest {
  Item item = 1;
}

message ItemReply {
}